@@ -132,8 +132,8 @@ public class BoundaryPolyCurve2D<T extends ContinuousOrientedCurve2D> extends
 
     @Override
     public BoundaryPolyCurve2D<? extends ContinuousOrientedCurve2D> getReverseCurve() {
-        ContinuousOrientedCurve2D[] curves2 = new ContinuousOrientedCurve2D[curves
-                .size()];
+        ContinuousOrientedCurve2D[] curves2 = 
+        	new ContinuousOrientedCurve2D[curves.size()];
         int n = curves.size();
         for (int i = 0; i<n; i++)
             curves2[i] = curves.get(n-1-i).getReverseCurve();
@@ -144,7 +144,7 @@ public class BoundaryPolyCurve2D<T extends ContinuousOrientedCurve2D> extends
     public BoundaryPolyCurve2D<ContinuousOrientedCurve2D> transform(
             AffineTransform2D trans) {
         BoundaryPolyCurve2D<ContinuousOrientedCurve2D> result =
-        	new BoundaryPolyCurve2D<ContinuousOrientedCurve2D>();
+        	new BoundaryPolyCurve2D<ContinuousOrientedCurve2D>(curves.size());
         for (ContinuousOrientedCurve2D curve : curves)
             result.addCurve(curve.transform(trans));
         return result;
